# DeepLearning-Watermark

./: .gitignore  README.md
DCT-Watermark_TorchC/: DCT-Watermark_TorchC.sln
DCT-Watermark_TorchC/DCT-Watermark_TorchC/: DCT-Watermark_TorchC.cpp  DCT-Watermark_TorchC.vcxproj  DCT-Watermark_TorchC.vcxproj.filters  DCT_Watermark.cpp  DCT_Watermark.h
PreprocessC++/PreprocessC++/: PreprocessC++.sln
PreprocessC++/PreprocessC++/PreprocessC++/: Preprocess.cpp  Preprocess.h  PreprocessC++.cpp  PreprocessC++.vcxproj  PreprocessC++.vcxproj.filters
PreprocessC++_In_CLion/: CMakeLists.txt  Preprocess.cpp  Preprocess.h  PreprocessC++.cpp
Try on my own/: Pix2Pix_Performance.py  Try on my own.pyproj  Try on my own.sln  WaterMarkFaker.py  requirements.txt
WaterMarkCoreC++/: CMakeLists.txt  DCT-Watermark_Core.cpp
WaterMarkCore_TorchC/: CMakeLists.txt  DCT-Watermark_Core.cpp  DCT_Watermark.cpp  DCT_Watermark.h
watermarkFakerCore/code_watermark_wang/: __init__.py  create_dct_blocks.py  pix2pix-GrayVer.py  pix2pix-res-1-newLoss-test.py  pix2pix-res-1-test.py  pix2pix-res-2-newInput-test.py  pix2pix-res-2-newInput2-GREYver.py  pix2pix-res-2-newInput2-test.py  pix2pix-res-3.py  pix2pix_semi-harmonic.py  pix2pix_withNotes - 副本3channelsTest.py  pix2pix_withNotes.py  test.py
watermarkFakerCore/code_watermark_wang/.devcontainer/: devcontainer.json
watermarkFakerCore/code_watermark_wang/D:\CS-Related\Watermark Faker\Watermark Faker Output/: options.json
watermarkFakerCore/code_watermark_wang/Pix2Pix/: Pix2PixAlgorithm_Origional.py  Pix2PixAlgorithm_Origional_Commented.py  Pix2Pix_Grayscale_Version.py  create_dct_blocks.py  pix2pix - 副本.py  pix2pix-res-1-newLoss.py  pix2pix-res-1.py  pix2pix-res-2-newInput.py  pix2pix-res-2-newInput2.py  pix2pix-res-2-test.py  pix2pix-res-3-newInput2.py  pix2pix-res-3-test.py  pix2pix-test-ChangLoss.py  pix2pix-test.py  pix2pix.py  pix2pix_forOneChannelTest-test.py  pix2pix_forOneChannelTest.py  pix2pix_withNotes.py
watermarkFakerCore/code_watermark_wang/Some_Weird_Ones/: pix2pix_GrayVer_dct2_blockDCT.py  pix2pix_GrayVer_dct2_bn.py  spectrum_map.py  (+2 more)
(+88 files in other folders)
