cmake_minimum_required(VERSION 3.19)
set(CMAKE_CXX_STANDARD 14)
project(WaterMarkCoreC__)
find_package(Torch REQUIRED)
find_package(OpenCV REQUIRED)
add_executable(WaterMarkCore_TorchC DCT-Watermark_Core.cpp DCT_Watermark.cpp DCT_Watermark.h)
target_link_libraries(WaterMarkCore_TorchC "${OpenCV_LIBS} ${TORCH_LIBRARIES}")
set_property(TARGET WaterMarkCore_TorchC PROPERTY CXX_STANDARD 14)
